stops nav bar from wrapping

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -61,6 +61,7 @@ main ul {
 
 nav {
   position: absolute;
+  width: inherit;
 }
 
 nav ul {
